--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h6 {
 	width: 100%;
 }
 .banner-overlay {
-	background:linear-gradient(to bottom, url(images/lab.png) 0%, url(images/lab.png) 100%);
+	background:linear-gradient(to bottom, url(images/orig.png) 40%, url(images/lab.png) 60%);
 	padding:220px 0px 170px;
 }
 .banner h1 {
