--- a/style.css
+++ b/style.css
@@ -131,10 +131,15 @@ h6 {
 .nav-scroll .active {
 	position: relative;
 }
+.banner {
+	background:url(images/bg1.jpg) no-repeat 0% 0% / 100% 100%;
+	color:#ffffff;
+	text-align: center;
+	width: 100%;
+}
 .banner-overlay {
-	background-image:url(images/orig.png), url(images/lab.png);
-	background-repeat: no-repeat;
-        background-blend-mode: lighten;
+	background:linear-gradient(to bottom, rgba(171, 47, 82, 0.82) 0%, #ffaf53 100%);
+	padding:220px 0px 170px;
 }
 .banner h1 {
 	color:#ffffff;
