--- a/style.css
+++ b/style.css
@@ -132,13 +132,13 @@ h6 {
 	position: relative;
 }
 .banner {
-	background:url(images/bg1.jpg) no-repeat 0% 0% / 100% 100%;
+	background:url(images/orig.png) no-repeat 0% 0% / 100% 100%;
 	color:#ffffff;
 	text-align: center;
 	width: 100%;
 }
 .banner-overlay {
-	background:linear-gradient(to bottom, rgba(171, 47, 82, 0.82) 0%, #ffaf53 100%);
+	background:linear-gradient(to bottom, rgba(171, 47, 82, 0.4) 0%, #ffaf53 100%);
 	padding:220px 0px 170px;
 }
 .banner h1 {
