--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h6 {
 	width: 100%;
 }
 .banner-overlay {
-	background:linear-gradient(to bottom, rgba(171, 47, 82, 0.4) 0%, #ffaf53 100%);
+	background:linear-gradient(to top, rgba(168, 237, 234,0.5) 0%, #fed6e3 100%);
 	padding:220px 0px 170px;
 }
 .banner h1 {
