--- a/style.css
+++ b/style.css
@@ -315,8 +315,8 @@ h6 {
 }
 .portfolio .gallery .item-img a {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	height: 80%;
 	z-index: 1;
 }
 .portfolio .gallery .item-img .part-img {
@@ -326,8 +326,7 @@ h6 {
 	width: 100%;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	border: 4px groove blue;
-	border-radius: 5%;
+	border: 3px groove #9780A5;
 }
 .portfolio .gallery .item-img .part-img .overlay-img {
 	position: absolute;
