--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h6 {
 	width: 100%;
 	-webkit-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-	border-radius: 3%;
+	border: 2px solid #818589;
 }
 .portfolio .gallery .item-img .part-img .overlay-img {
 	position: absolute;
@@ -334,7 +334,6 @@ h6 {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
-	border-radius: 3%;
 }
 .portfolio .gallery .item-img .part-img .overlay-img:after {
 	content: '';
