--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ h6 {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img:after {
 	content: '';
