--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ h6 {
 	background: rgba(0, 0, 0, 0.8);
 	-webkit-transition: all 150ms ease-in-out 200ms;
 	transition: all 150ms ease-in-out 200ms;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img:before {
 	content: '';
@@ -357,10 +358,12 @@ h6 {
 	background: rgba(0, 0, 0, 0.8);
 	-webkit-transition: all 150ms ease-in-out 200ms;
 	transition: all 150ms ease-in-out 200ms;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img a {
 	width: 100%;
 	height: 100%;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img h4 {
 	color: transparent;
@@ -374,6 +377,7 @@ h6 {
 	transition: color 150ms ease-in-out 200ms;
 	text-align: center;
 	padding: 0 10px;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img h4:before {
 	content: '';
@@ -385,6 +389,7 @@ h6 {
 	width: 100%;
 	-webkit-transition: right 600ms ease-in-out 0s;
 	transition: right 600ms ease-in-out 0s;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img h6 {
 	color: transparent;
@@ -398,6 +403,7 @@ h6 {
 	transition: color 150ms ease-in-out 200ms;
 	text-align: center;
 	padding: 0 10px;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img .part-img .overlay-img h6::before {
 	content: '';
@@ -410,16 +416,19 @@ h6 {
 	width: 100%;
 	-webkit-transition: left 600ms ease-in-out 0s;
 	transition: left 600ms ease-in-out 0s;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover img {
 	-webkit-transform: scale(1.04);
 	transform: scale(1.04);
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img:after {
 	left: 0;
 	-webkit-transition: all .8s;
 	transition: all .8s;
 	opacity: 1;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img:before {
 	right: 0;
@@ -428,18 +437,23 @@ h6 {
 	-webkit-transition: all .8s;
 	transition: all .8s;
 	opacity: 1;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img h4 {
 	color: white;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img h4:before {
 	right: -100%;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img h6 {
 	color: white;
+	pointer-events: none;
 }
 .portfolio .gallery .item-img:hover .overlay-img h6:before {
 	left: -100%;
+	pointer-events: none;
 }
 .portfolio-style2 .filtering {
 	border: 1px solid #e1e1e1;
