--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h6 {
 	padding: 0;
 }
 .navbar .nav-item a {
-	color: #ffffff;
+	color: #000000;
 	font-weight: 300;
 }
 .navbar .nav-link {
@@ -138,11 +138,11 @@ h6 {
 	width: 100%;
 }
 .banner-overlay {
-	background:linear-gradient(to top, rgba(168, 237, 234,0.2) 0%, #fed6e3 50%);
+	background:linear-gradient(to top, rgba(168, 237, 234,0.2) 0%, #fed6e3 100%);
 	padding:220px 0px 170px;
 }
 .banner h1 {
-	color:#ffffff;
+	color:#000000;
 }
 .banner p {
 	margin:15px auto 15px;
