--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ a {
 }
 a:hover {
 	color: #ab2f52 !important;
-	font-weight: bold
 }
 img {
 	max-width: 100%;
@@ -82,6 +81,8 @@ h6 {
 }
 .navbar .active {
 	color: #ab2f52 !important;
+	font-weight: bold;
+
 }
 .navbar .navbar-brand {
 }
