--- a/style.css
+++ b/style.css
@@ -67,6 +67,20 @@ h4 {
 h6 {
 	font-weight: bold;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 .navbar {
 	position: fixed;
 	right: 0;
