--- a/style.css
+++ b/style.css
@@ -69,10 +69,11 @@ h6 {
 }
 table {
   border-collapse: collapse;
-  width: 100%;
+  width: 80%;
 }
 
 td, th {
+  text-align: center;
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
