--- a/style.css
+++ b/style.css
@@ -68,15 +68,15 @@ h6 {
 	font-weight: bold;
 }
 table {
-  text-align: center;
   border-collapse: collapse;
   width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 td, th {
   text-align: center;
   border: 1px solid #dddddd;
-  text-align: left;
   padding: 8px;
 }
 
