--- a/style.css
+++ b/style.css
@@ -269,6 +269,10 @@ tr:nth-child(2) {
 	-webkit-box-shadow: 0px 5px 35px 0px rgba(148, 146, 245, 0.15);
 	box-shadow: 0px 5px 35px 0px rgba(148, 146, 245, 0.15);
 }
+.service-box2 {
+	padding: 50px;
+	border-radius: 4px;
+}
 .service-box .icon {
 }
 .service-box .icon i {
