--- a/style.css
+++ b/style.css
@@ -272,11 +272,17 @@ tr:nth-child(2) {
 .service-box2 {
 	padding: 50px;
 	border-radius: 4px;
-	box-shadow: 0px 5px 35px 0px rgba(148, 146, 245, 0.15);
 }
 .service-box .icon {
 }
 .service-box .icon i {
+	font-size: 40px;
+	color: #ffaf53;
+}
+}
+.service-box2 .icon {
+}
+.service-box2 .icon i {
 	font-size: 40px;
 	color: #ffaf53;
 }
